--- a/.github/workflows/checklang.yml
+++ b/.github/workflows/checklang.yml
@@ -3,10 +3,10 @@ name: Check for changes in gflanguages
 on:
   schedule:
     # * is a special character in YAML so you have to quote this string
-    - cron:  '0 23 * * 3'
-  # push:
-  #   paths:
-  #     - '**.yml'
+    - cron:  '0 23 * * 2'
+  push:
+    paths:
+      - '**.yml'
 
 jobs:
   diff:
@@ -31,4 +31,5 @@ jobs:
         sh build.sh
         cd ..
         cd glyphsets
-        diff -r -x BODY -x .git -x _* . ../upstream || echo -e "Recent data changes in **gflanguages** lead to the following glyphset definition changes:\n\n" > BODY; echo -e '```diff' >> BODY; echo -e "`diff -r -x BODY -x .git -x _* . ../upstream`" >> BODY; echo -e '```' >> BODY; cat BODY; gh issue create --title "Changes in gflanguages data" --body-file BODY --label "dependencies"
+        export COMMAND='diff -r -x BODY -x .git -x _* -x build -x *.egg-info . ../upstream'
+        eval $COMMAND || echo -e "Recent data changes in **gflanguages** lead to the following glyphset definition changes:\n\n" > BODY; echo -e '```diff' >> BODY; echo -e "`eval $COMMAND`" >> BODY; echo -e '```' >> BODY; cat BODY; gh issue create --title "Changes in gflanguages data" --body-file BODY --label "dependencies"
