--- a/.github/workflows/checklang.yml
+++ b/.github/workflows/checklang.yml
@@ -34,10 +34,11 @@ jobs:
         rm -rf .git
         rm -rf _*
         cd ..
+        rm -rf *.egg-info
         cd glyphsets
         rm -rf *.egg-info
         rm -rf build
         rm -rf .git
         rm -rf _*
-        diff -r -x BODY . ../upstream || echo "Diff return value: $?"; echo -e "Recent data changes in **gflanguages** lead to the following glyphset definition changes:\n\n" > BODY; echo -e '```diff' >> BODY; echo -e "`diff -r -x BODY -x .git -x _* -x build -x *.egg-info . ../upstream`" >> BODY; echo -e '```' >> BODY; echo "BODY:"; cat BODY; 
+        diff -r -x BODY . ../upstream || echo "Diff return value: $?"; echo -e "Recent data changes in **gflanguages** lead to the following glyphset definition changes:\n\n" > BODY; echo -e '```diff' >> BODY; echo -e "`diff -r -x BODY . ../upstream`" >> BODY; echo -e '```' >> BODY; echo "BODY:"; cat BODY; 
       # gh issue create --title "Changes in gflanguages data" --body-file BODY --label "dependencies"
