--- a/.github/workflows/checklang.yml
+++ b/.github/workflows/checklang.yml
@@ -29,20 +29,20 @@ jobs:
         pip install -U git+https://github.com/googlefonts/lang
         pip freeze
         sh build.sh
-        rm -rf __pycache__
-        rm -rf _version.py
-        rm -rf *.egg-info
-        rm -rf build
-        rm -rf .git
-        rm -rf _*
+        rm -f __pycache__
+        rm -f _version.py
+        rm -f *.egg-info
+        rm -f build
+        rm -f .git
+        rm -f _*
         cd ..
-        rm -rf glyphsets.egg-info
+        rm -f glyphsets.egg-info
         cd glyphsets
-        rm -rf __pycache__
-        rm -rf _version.py
-        rm -rf *.egg-info
-        rm -rf build
-        rm -rf .git
-        rm -rf _*
+        rm -f __pycache__
+        rm -f _version.py
+        rm -f *.egg-info
+        rm -f build
+        rm -f .git
+        rm -f _*
         diff -r -x BODY . ../upstream || echo "Diff return value: $?"; echo -e "Recent data changes in **gflanguages** lead to the following glyphset definition changes:\n\n" > BODY; echo -e '```diff' >> BODY; echo -e "`diff -r -x BODY . ../upstream`" >> BODY; echo -e '```' >> BODY; echo "BODY:"; cat BODY; 
       # gh issue create --title "Changes in gflanguages data" --body-file BODY --label "dependencies"
