--- a/.github/workflows/checklang.yml
+++ b/.github/workflows/checklang.yml
@@ -33,7 +33,7 @@ jobs:
         rm -f _version.py
         rm -f *.egg-info
         rm -rf build
-        rm -f .git
+        rm -rf .git
         rm -f _*
         cd ..
         rm -f glyphsets.egg-info
@@ -42,7 +42,7 @@ jobs:
         rm -f _version.py
         rm -f *.egg-info
         rm -rf build
-        rm -f .git
+        rm -rf .git
         rm -f _*
         diff -r -x BODY . ../upstream || echo "Diff return value: $?"; echo -e "Recent data changes in **gflanguages** lead to the following glyphset definition changes:\n\n" > BODY; echo -e '```diff' >> BODY; echo -e "`diff -r -x BODY . ../upstream`" >> BODY; echo -e '```' >> BODY; echo "BODY:"; cat BODY; 
       # gh issue create --title "Changes in gflanguages data" --body-file BODY --label "dependencies"
