--- a/.github/workflows/checklang.yml
+++ b/.github/workflows/checklang.yml
@@ -42,12 +42,12 @@ jobs:
         rm -f glyphsets.egg-info
         cd glyphsets
         pwd
-        rm -f __pycache__
-        rm -f _version.py
+        rm -f Lib/glyphsets/__pycache__
+        rm -f Lib/glyphsets/_version.py
         rm -f *.egg-info
         rm -rf build
         rm -rf .git
         rm -f _*
-        rm -f glyphsets.egg-info
+        rm -f Lib/glyphsets.egg-info
         diff -r -x BODY . ../upstream || echo "Diff return value: $?"; echo -e "Recent data changes in **gflanguages** lead to the following glyphset definition changes:\n\n" > BODY; echo -e '```diff' >> BODY; echo -e "`diff -r -x BODY . ../upstream`" >> BODY; echo -e '```' >> BODY; echo "BODY:"; cat BODY; 
       # gh issue create --title "Changes in gflanguages data" --body-file BODY --label "dependencies"
