--- a/.github/workflows/checklang.yml
+++ b/.github/workflows/checklang.yml
@@ -36,6 +36,6 @@ jobs:
         echo "pwd: `pwd`"
         rm -rf ../upstream/Lib/glyphsets/__pycache__
         rm -f ../upstream/Lib/glyphsets/_version.py
-        rm -f ../upstream/Lib/glyphsets.egg-info
+        rm -rf ../upstream/Lib/glyphsets.egg-info
         diff -r -x BODY . ../upstream || echo "Diff return value: $?"; echo -e "Recent data changes in **gflanguages** lead to the following glyphset definition changes:\n\n" > BODY; echo -e '```diff' >> BODY; echo -e "`diff -r -x BODY . ../upstream`" >> BODY; echo -e '```' >> BODY; echo "BODY:"; cat BODY; 
       # gh issue create --title "Changes in gflanguages data" --body-file BODY --label "dependencies"
