--- a/.github/workflows/checklang.yml
+++ b/.github/workflows/checklang.yml
@@ -4,9 +4,9 @@ on:
   schedule:
     # * is a special character in YAML so you have to quote this string
     - cron:  '0 23 * * 2'
-  push:
-    paths:
-      - '**.yml'
+  # push:
+  #   paths:
+  #     - '**.yml'
 
 jobs:
   diff:
