--- a/.github/workflows/checklang.yml
+++ b/.github/workflows/checklang.yml
@@ -23,6 +23,7 @@ jobs:
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         cd ..
+        echo "pwd: `pwd`"
         cp -r glyphsets upstream
         cd upstream
         pip install .
@@ -30,5 +31,12 @@ jobs:
         pip freeze
         sh build.sh
         cd ..
+        echo "pwd: `pwd`"
         cd glyphsets
-        diff -r -x BODY -x .git -x _* -x build -x *.egg-info . ../upstream || echo -e "Recent data changes in **gflanguages** lead to the following glyphset definition changes:\n\n" > BODY; echo -e '```diff' >> BODY; echo -e "`diff -r -x BODY -x .git -x _* -x build -x *.egg-info . ../upstream`" >> BODY; echo -e '```' >> BODY; cat BODY; gh issue create --title "Changes in gflanguages data" --body-file BODY --label "dependencies"
+        echo "pwd: `pwd`"
+        rm -rf ../upstream/Lib/glyphsets/__pycache__
+        rm -f ../upstream/Lib/glyphsets/_version.py
+        rm -rf ../upstream/Lib/glyphsets.egg-info
+        rm -rf ../upstream/build
+        rm -f ./.git/index ../upstream/.git/index
+        diff -r -x BODY . ../upstream || (echo "Diff return value: $?"; echo -e "Recent data changes in **gflanguages** lead to the following glyphset definition changes:\n\n" > BODY; echo -e '```diff' >> BODY; echo -e "`diff -r -x BODY . ../upstream`" >> BODY; echo -e '```' >> BODY; echo "BODY:"; cat BODY; gh issue create --title "Changes in gflanguages data" --body-file BODY --label "dependencies")
