Malay got renamed

--- a/Lib/glyphsets/definitions/GF_Arabic_Plus.yaml
+++ b/Lib/glyphsets/definitions/GF_Arabic_Plus.yaml
@@ -2,7 +2,7 @@ description: Covering additional less widely used languages (but not characters 
   for historical or specialized texts)
 language_codes:
 - ckb_Arab
-- ms_Arab
+- zlm_Arab
 - ps_Arab
 - sd_Arab
 - ug_Arab
