Fontbakery needs a tests extra

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -33,7 +33,7 @@ jobs:
         run: |
           git clone https://github.com/fonttools/fontbakery.git
           cd fontbakery
-          pip install '.[all]'
+          pip install '.[tests]'
           cd ..
           pip install '.[dev]'
           pip freeze
