--- a/Lib/glyphsets/definitions/GF_Cyrillic_Pro.yaml
+++ b/Lib/glyphsets/definitions/GF_Cyrillic_Pro.yaml
@@ -1,4 +1,18 @@
-description: 'For Headline typefaces (?), with language support more Non-Slavic languages.
-  Additional characters in this set provide support for the following 18 languages:
-  Abkhaz, Chukchi, Enets, Eskimo, Even, Evenki, Itelmen, Khanty, Kildin Sami, Koryak,
-  Mansi, Nganasan, Nenets, Oroch, Orok, Sakha/Yakut, Tati, Yukaghir, Yupik Ulch'
+description: 'For Headline typefaces (?), with language support for more Non-Slavic languages.'
+language_codes:
+- ab_Cyrl
+- ckt_Cyrl
+# We used to claim support for Enets, but we have no definitions for it
+# - enf_Cyrl
+# - enh_Cyrl
+- eve_Cyrl
+- evn_Cyrl
+# - itl_Cyrl # No definition
+- kca_Cyrl
+- kpy_Cyrl
+- mns_Cyrl
+- nio_Cyrl
+- yrk_Cyrl
+- oaa_Cyrl
+- sah_Cyrl
+- ykg_Cyrl
