--- a/Lib/glyphsets/definitions/GF_Cyrillic_Core.yaml
+++ b/Lib/glyphsets/definitions/GF_Cyrillic_Core.yaml
@@ -1,7 +1,12 @@
 language_codes:
 - ru_Cyrl
 - uk_Cyrl
-- sr_Cyrl
+- kk_Cyrl
 - be_Cyrl
+- tg_Cyrl
 - bg_Cyrl
+- sr_Cyrl
+- ku_Cyrl
+- uz_Cyrl
 - bs_Cyrl
+- tk_Cyrl
