--- a/Lib/glyphsets/definitions/GF_Cyrillic_Core.yaml
+++ b/Lib/glyphsets/definitions/GF_Cyrillic_Core.yaml
@@ -1,3 +1,7 @@
+description: "Languages that use the Cyrillic alphabet and have more than 3 million speakers. 
+  This set is the minimum required for families that support the Cyrillic alphabet 
+  and want to be incorporated into Google Fonts."
+
 language_codes:
 - ru_Cyrl
 - uk_Cyrl
