Updated derivative files according after previous commit

--- a/data/results/plist/CustomFilter_GF_Latin.plist
+++ b/data/results/plist/CustomFilter_GF_Latin.plist
@@ -1207,6 +1207,7 @@
 			<string>notequal</string>
 			<string>lessequal</string>
 			<string>greaterequal</string>
+			<string>D.circled</string>
 			<string>blackSquare</string>
 			<string>whiteSquare</string>
 			<string>blackSmallSquare</string>
