[GF_Cyrillic_Core] language + speakers redefinition - adding languages (#231)
* GF Cyrillic Core yaml languages added

* GF_Cyr_Core language + # speakers based

* ku_Cyrl deleted as it's no logner used

* Adding a description for GF Cyrillic Core

* Update glyphset data

---------

Co-authored-by: vv-monsalve <vv-monsalve@users.noreply.github.com>

--- a/Lib/glyphsets/definitions/GF_Cyrillic_Core.yaml
+++ b/Lib/glyphsets/definitions/GF_Cyrillic_Core.yaml
@@ -1,7 +1,15 @@
+description: "Languages that use the Cyrillic alphabet and have more than 3 million speakers. 
+  This set is the minimum required for families that support the Cyrillic alphabet 
+  and want to be incorporated into Google Fonts."
+
 language_codes:
 - ru_Cyrl
 - uk_Cyrl
-- sr_Cyrl
+- kk_Cyrl
 - be_Cyrl
+- tg_Cyrl
 - bg_Cyrl
+- sr_Cyrl
+- uz_Cyrl
 - bs_Cyrl
+- tk_Cyrl
