[GF_Cyrillic_Plus] language + speakers redefinition (#227)
* GF Cyrillic Plus yaml new definition

* GF_Cyrillic_Plus stub definition temporarily rm

* GF_Cyrillic_Plus language + # speakers based

* Ingush > 200k lang added to Cyr Plus

--- a/Lib/glyphsets/definitions/GF_Cyrillic_Plus.yaml
+++ b/Lib/glyphsets/definitions/GF_Cyrillic_Plus.yaml
@@ -1,17 +1,32 @@
-description: "Includes added language coverage for Slavic, Non-Slavic, and Uralic
-  languages. Supports the following 90 Cyrillic languages: Abaza, Adyghe, Agul, Akhvakh,
-  Altay, Andi, Archi, Avar, Azerbaijani (Cyrillic), Bagvalal Balkar, Bashkir, Belarusian
-  (Cyrillic), Bosnian (Cyrillic), Botlikh, Budukh, Bulgarian, Buryat, Chamalal, Chechen,
-  Chuvash, Crimean Tatar (Cyrillic), Croatian (Cyrillic), Dargwa/Dargin, Dungan, Erzya,
-  Gagauz (Cyrillic), Godoberi, Hinukh, Hunzib, Ingush, Juhuri/çuhuri (Cyrillic), Kabardian,
-  Kalmyk, Karachay, Karaim (Cyrillic), Karakalpak (Cyrillic), Karata, Kazakh, Ket
-  (Cyrillic), Khakas (Cyrillic), Khinalugh, Komi, Krymchak, Kryts, Kubachi, Kumyk,
-  Kurdish (Cyrillic), Kurdish (Cyrillic), Kyrgyz (Cyrillic), Lak, Lezgian, Lingua
-  Franca Nova (Cyrillic), Macedonian, Mari (Hill and Meadow), Moksha, Moldovan (Cyrillic),
-  Mongolian (Cyrillic), Montenigrin (Cyrillic), Nanai, Nogai, Ossetian, Russian, Rusyn,
-  Rutul, Serbian (Cyrillic), Shor, Slovio, Tabassaran, Tajik, Talysh (Cyrillic), Tat,
-  Tatar, Tindi, Tofa, Tsakhur (Cyrillic), Tsez, Turkmen, Tuvan/Tuvinian, Udi, Udmurt,
-  Ukrainian, Urum, Uyghur (Cyrillic), Uzbek (Cyrillic), Votik (Cyrillic), Wakhi (Cyrillic),
-  West Polesian, Yaghnobi (Cyrillic), Yukaghir (Northern and Southern)\n\nIncludes
-  currencies: ₮, ₴, ₸.\n\nThe ruble sign (₽ U+20BD) is not included, since it is already
-  present in the Latin Plus set."
+description: "Languages that uses the Cyrillic script between 240K and 3M speakers. 
+  This set is the intermediate set required for all families that want to give support
+  beyond the GF Cyrillic Core."
+language_codes:
+- mn_Cyrl
+- ky_Cyrl
+- tt_Cyrl
+- ba_Cyrl
+- cv_Cyrl
+- mk_Cyrl
+- az_Cyrl
+- kbd_Cyrl
+- ce_Cyrl
+- os_Cyrl
+- av_Cyrl
+- udm_Cyrl
+- rue_Cyrl
+- chm_Cyrl
+- kaa_Cyrl
+- sah_Cyrl
+- ady_Cyrl
+- myv_Cyrl
+- ug_Cyrl
+- dar_Cyrl
+- bua_Cyrl
+- mdf_Cyrl
+- kum_Cyrl
+- kv_Cyrl
+- lez_Cyrl
+- crh_Cyrl
+- krc_Cyrl
+- inh_Cyrl
