--- a/data/results/plist/CustomFilter_GF_Cyrillic.plist
+++ b/data/results/plist/CustomFilter_GF_Cyrillic.plist
@@ -168,6 +168,34 @@
 			<string>quotedblbase</string>
 			<string>ellipsis</string>
 			<string>numero</string>
+			<string>brevecomb-cy</string>
+			<string>De-cy.loclBGR</string>
+			<string>Ii-cy.loclBGR</string>
+			<string>Iishort-cy.loclBGR</string>
+			<string>Iigrave-cy.loclBGR</string>
+			<string>El-cy.loclBGR</string>
+			<string>Ef-cy.loclBGR</string>
+			<string>ve-cy.loclBGR</string>
+			<string>ge-cy.loclBGR</string>
+			<string>de-cy.loclBGR</string>
+			<string>zhe-cy.loclBGR</string>
+			<string>ze-cy.loclBGR</string>
+			<string>ii-cy.loclBGR</string>
+			<string>iishort-cy.loclBGR</string>
+			<string>iigrave-cy.loclBGR</string>
+			<string>ka-cy.loclBGR</string>
+			<string>el-cy.loclBGR</string>
+			<string>pe-cy.loclBGR</string>
+			<string>te-cy.loclBGR</string>
+			<string>yu-cy.loclBGR</string>
+			<string>gje-cy.loclMKD</string>
+			<string>be-cy.loclSRB</string>
+			<string>ge-cy.loclSRB</string>
+			<string>de-cy.loclSRB</string>
+			<string>ii-cy.loclSRB</string>
+			<string>pe-cy.loclSRB</string>
+			<string>te-cy.loclSRB</string>
+			<string>sha-cy.loclSRB</string>
 		</array>
 		<key>name</key>
 		<string>GF_Cyrillic_Core</string>
@@ -408,6 +436,41 @@
 			<string>quotedblright</string>
 			<string>quotedblbase</string>
 			<string>ellipsis</string>
+			<string>brevecomb-cy</string>
+			<string>De-cy.loclBGR</string>
+			<string>Ii-cy.loclBGR</string>
+			<string>Iishort-cy.loclBGR</string>
+			<string>Iigrave-cy.loclBGR</string>
+			<string>El-cy.loclBGR</string>
+			<string>Ef-cy.loclBGR</string>
+			<string>Gestroke-cy.loclBSH</string>
+			<string>Zedescender-cy.loclBSH</string>
+			<string>Esdescender-cy.loclBSH</string>
+			<string>Esdescender-cy.loclCHU</string>
+			<string>ve-cy.loclBGR</string>
+			<string>ge-cy.loclBGR</string>
+			<string>de-cy.loclBGR</string>
+			<string>zhe-cy.loclBGR</string>
+			<string>ze-cy.loclBGR</string>
+			<string>ii-cy.loclBGR</string>
+			<string>iishort-cy.loclBGR</string>
+			<string>iigrave-cy.loclBGR</string>
+			<string>ka-cy.loclBGR</string>
+			<string>el-cy.loclBGR</string>
+			<string>pe-cy.loclBGR</string>
+			<string>te-cy.loclBGR</string>
+			<string>yu-cy.loclBGR</string>
+			<string>gestroke-cy.loclBSH</string>
+			<string>esdescender-cy.loclBSH</string>
+			<string>esdescender-cy.loclCHU</string>
+			<string>gje-cy.loclMKD</string>
+			<string>be-cy.loclSRB</string>
+			<string>ge-cy.loclSRB</string>
+			<string>de-cy.loclSRB</string>
+			<string>ii-cy.loclSRB</string>
+			<string>pe-cy.loclSRB</string>
+			<string>te-cy.loclSRB</string>
+			<string>sha-cy.loclSRB</string>
 		</array>
 		<key>name</key>
 		<string>GF_Cyrillic_Plus</string>
