Re-arrange glyphset assembly with updated files

--- a/data/results/plist/CustomFilter_GF_Cyrillic.plist
+++ b/data/results/plist/CustomFilter_GF_Cyrillic.plist
@@ -421,8 +421,8 @@
 			<string>semisoftsign-cy</string>
 			<string>Ertick-cy</string>
 			<string>ertick-cy</string>
-			<string>Ghemiddlehook-cy</string>
-			<string>ghemiddlehook-cy</string>
+			<string>Gemiddlehook-cy</string>
+			<string>gemiddlehook-cy</string>
 			<string>Kastroke-cy</string>
 			<string>kastroke-cy</string>
 			<string>Haabkhasian-cy</string>
