--- a/data/results/plist/CustomFilter_GF_Latin.plist
+++ b/data/results/plist/CustomFilter_GF_Latin.plist
@@ -554,11 +554,11 @@
 			<string>Oopen</string>
 			<string>Schwa</string>
 			<string>Eopen</string>
-			<string>Gammaafrican</string>
+			<string>Gamma-latin</string>
 			<string>Istroke</string>
 			<string>lbar</string>
 			<string>lambdastroke</string>
-			<string>Upsilonafrican</string>
+			<string>Upsilon-latin</string>
 			<string>Ezh</string>
 			<string>clickalveolar</string>
 			<string>Acaron</string>
@@ -587,14 +587,14 @@
 			<string>cstroke</string>
 			<string>Lbar</string>
 			<string>Tdiagonalstroke</string>
-			<string>Glottalstop</string>
+			<string>Glottalstopsmall</string>
 			<string>oopen</string>
 			<string>schwa</string>
 			<string>eopen</string>
 			<string>gamma-latin</string>
 			<string>istroke</string>
 			<string>iota-latin</string>
-			<string>Ismall</string>
+			<string>icapitalsmall</string>
 			<string>lmiddletilde</string>
 			<string>lbelt</string>
 			<string>upsilon-latin</string>
@@ -630,28 +630,28 @@
 			<string>kacute</string>
 			<string>Kdotbelow</string>
 			<string>kdotbelow</string>
-			<string>Klinebelow</string>
-			<string>klinebelow</string>
+			<string>Kmacronbelow</string>
+			<string>kmacronbelow</string>
 			<string>Ldotbelow</string>
 			<string>ldotbelow</string>
 			<string>Mdotbelow</string>
 			<string>mdotbelow</string>
 			<string>Ndotbelow</string>
 			<string>ndotbelow</string>
-			<string>Nlinebelow</string>
-			<string>nlinebelow</string>
+			<string>Nmacronbelow</string>
+			<string>nmacronbelow</string>
 			<string>Omacrongrave</string>
 			<string>omacrongrave</string>
 			<string>Omacronacute</string>
 			<string>omacronacute</string>
 			<string>Sdotbelow</string>
 			<string>sdotbelow</string>
-			<string>Tlinebelow</string>
-			<string>tlinebelow</string>
+			<string>Tmacronbelow</string>
+			<string>tmacronbelow</string>
 			<string>Zcircumflex</string>
 			<string>zcircumflex</string>
-			<string>Zlinebelow</string>
-			<string>zlinebelow</string>
+			<string>Zmacronbelow</string>
+			<string>zmacronbelow</string>
 			<string>Etilde</string>
 			<string>etilde</string>
 			<string>Idotbelow</string>
