--- a/Lib/glyphsets/definitions/GF_Cyrillic_Pro.yaml
+++ b/Lib/glyphsets/definitions/GF_Cyrillic_Pro.yaml
@@ -2,3 +2,6 @@ description: 'For Headline typefaces (?), with language support more Non-Slavic 
   Additional characters in this set provide support for the following 18 languages:
   Abkhaz, Chukchi, Enets, Eskimo, Even, Evenki, Itelmen, Khanty, Kildin Sami, Koryak,
   Mansi, Nganasan, Nenets, Oroch, Orok, Sakha/Yakut, Tati, Yukaghir, Yupik Ulch'
+
+include_glyphsets:
+- GF_Cyrillic_Plus
