--- a/data/results/plist/CustomFilter_GF_Cyrillic.plist
+++ b/data/results/plist/CustomFilter_GF_Cyrillic.plist
@@ -247,15 +247,19 @@
 			<string>question</string>
 			<string>at</string>
 			<string>bracketleft</string>
+			<string>backslash</string>
 			<string>bracketright</string>
 			<string>guillemetleft</string>
 			<string>guillemetright</string>
+			<string>apostrophemod</string>
 			<string>gravecomb</string>
 			<string>acutecomb</string>
+			<string>macroncomb</string>
 			<string>brevecomb</string>
 			<string>dieresiscomb</string>
 			<string>hungarumlautcomb</string>
 			<string>Io-cy</string>
+			<string>Dje-cy</string>
 			<string>Gje-cy</string>
 			<string>E-cy</string>
 			<string>Dze-cy</string>
@@ -264,6 +268,7 @@
 			<string>Je-cy</string>
 			<string>Lje-cy</string>
 			<string>Nje-cy</string>
+			<string>Tshe-cy</string>
 			<string>Kje-cy</string>
 			<string>Ushort-cy</string>
 			<string>Dzhe-cy</string>
@@ -332,6 +337,7 @@
 			<string>yu-cy</string>
 			<string>ya-cy</string>
 			<string>io-cy</string>
+			<string>dje-cy</string>
 			<string>gje-cy</string>
 			<string>e-cy</string>
 			<string>dze-cy</string>
@@ -340,6 +346,7 @@
 			<string>je-cy</string>
 			<string>lje-cy</string>
 			<string>nje-cy</string>
+			<string>tshe-cy</string>
 			<string>kje-cy</string>
 			<string>ushort-cy</string>
 			<string>dzhe-cy</string>
@@ -367,8 +374,12 @@
 			<string>esdescender-cy</string>
 			<string>Ustraight-cy</string>
 			<string>ustraight-cy</string>
+			<string>Ustraightstroke-cy</string>
+			<string>ustraightstroke-cy</string>
 			<string>Hadescender-cy</string>
 			<string>hadescender-cy</string>
+			<string>Chedescender-cy</string>
+			<string>chedescender-cy</string>
 			<string>Cheverticalstroke-cy</string>
 			<string>cheverticalstroke-cy</string>
 			<string>Shha-cy</string>
@@ -387,12 +398,16 @@
 			<string>zhedieresis-cy</string>
 			<string>Zedieresis-cy</string>
 			<string>zedieresis-cy</string>
+			<string>Imacron-cy</string>
+			<string>imacron-cy</string>
 			<string>Idieresis-cy</string>
 			<string>idieresis-cy</string>
 			<string>Odieresis-cy</string>
 			<string>odieresis-cy</string>
 			<string>Obarred-cy</string>
 			<string>obarred-cy</string>
+			<string>Umacron-cy</string>
+			<string>umacron-cy</string>
 			<string>Udieresis-cy</string>
 			<string>udieresis-cy</string>
 			<string>Uhungarumlaut-cy</string>
@@ -408,6 +423,7 @@
 			<string>quotedblright</string>
 			<string>quotedblbase</string>
 			<string>ellipsis</string>
+			<string>numero</string>
 		</array>
 		<key>name</key>
 		<string>GF_Cyrillic_Plus</string>
@@ -415,26 +431,191 @@
 	<dict>
 		<key>list</key>
 		<array>
+			<string>exclam</string>
+			<string>quotedbl</string>
+			<string>numbersign</string>
+			<string>percent</string>
+			<string>ampersand</string>
+			<string>quotesingle</string>
+			<string>parenleft</string>
+			<string>parenright</string>
+			<string>asterisk</string>
+			<string>plus</string>
+			<string>comma</string>
+			<string>hyphen</string>
+			<string>period</string>
+			<string>slash</string>
+			<string>zero</string>
+			<string>one</string>
+			<string>two</string>
+			<string>three</string>
+			<string>four</string>
+			<string>five</string>
+			<string>six</string>
+			<string>seven</string>
+			<string>eight</string>
+			<string>nine</string>
+			<string>colon</string>
+			<string>semicolon</string>
+			<string>question</string>
+			<string>at</string>
+			<string>bracketleft</string>
+			<string>backslash</string>
+			<string>bracketright</string>
+			<string>guillemetleft</string>
+			<string>guillemetright</string>
+			<string>apostrophemod</string>
+			<string>gravecomb</string>
+			<string>acutecomb</string>
+			<string>macroncomb</string>
+			<string>brevecomb</string>
+			<string>dieresiscomb</string>
+			<string>hungarumlautcomb</string>
+			<string>Io-cy</string>
+			<string>Dje-cy</string>
+			<string>Gje-cy</string>
+			<string>E-cy</string>
+			<string>Dze-cy</string>
+			<string>I-cy</string>
+			<string>Yi-cy</string>
+			<string>Je-cy</string>
+			<string>Lje-cy</string>
+			<string>Nje-cy</string>
+			<string>Tshe-cy</string>
+			<string>Kje-cy</string>
+			<string>Ushort-cy</string>
+			<string>Dzhe-cy</string>
+			<string>A-cy</string>
+			<string>Be-cy</string>
+			<string>Ve-cy</string>
+			<string>Ge-cy</string>
+			<string>De-cy</string>
+			<string>Ie-cy</string>
+			<string>Zhe-cy</string>
+			<string>Ze-cy</string>
+			<string>Ii-cy</string>
+			<string>Iishort-cy</string>
+			<string>Ka-cy</string>
+			<string>El-cy</string>
+			<string>Em-cy</string>
+			<string>En-cy</string>
+			<string>O-cy</string>
+			<string>Pe-cy</string>
+			<string>Er-cy</string>
+			<string>Es-cy</string>
+			<string>Te-cy</string>
+			<string>U-cy</string>
+			<string>Ef-cy</string>
+			<string>Ha-cy</string>
+			<string>Tse-cy</string>
+			<string>Che-cy</string>
+			<string>Sha-cy</string>
+			<string>Shcha-cy</string>
+			<string>Hardsign-cy</string>
+			<string>Yeru-cy</string>
+			<string>Softsign-cy</string>
+			<string>Ereversed-cy</string>
+			<string>Yu-cy</string>
+			<string>Ya-cy</string>
+			<string>a-cy</string>
+			<string>be-cy</string>
+			<string>ve-cy</string>
+			<string>ge-cy</string>
+			<string>de-cy</string>
+			<string>ie-cy</string>
+			<string>zhe-cy</string>
+			<string>ze-cy</string>
+			<string>ii-cy</string>
+			<string>iishort-cy</string>
+			<string>ka-cy</string>
+			<string>el-cy</string>
+			<string>em-cy</string>
+			<string>en-cy</string>
+			<string>o-cy</string>
+			<string>pe-cy</string>
+			<string>er-cy</string>
+			<string>es-cy</string>
+			<string>te-cy</string>
+			<string>u-cy</string>
+			<string>ef-cy</string>
+			<string>ha-cy</string>
+			<string>tse-cy</string>
+			<string>che-cy</string>
+			<string>sha-cy</string>
+			<string>shcha-cy</string>
+			<string>hardsign-cy</string>
+			<string>yeru-cy</string>
+			<string>softsign-cy</string>
+			<string>ereversed-cy</string>
+			<string>yu-cy</string>
+			<string>ya-cy</string>
+			<string>io-cy</string>
+			<string>dje-cy</string>
+			<string>gje-cy</string>
+			<string>e-cy</string>
+			<string>dze-cy</string>
+			<string>i-cy</string>
+			<string>yi-cy</string>
+			<string>je-cy</string>
+			<string>lje-cy</string>
+			<string>nje-cy</string>
+			<string>tshe-cy</string>
+			<string>kje-cy</string>
+			<string>ushort-cy</string>
+			<string>dzhe-cy</string>
 			<string>Iishorttail-cy</string>
 			<string>iishorttail-cy</string>
 			<string>Semisoftsign-cy</string>
 			<string>semisoftsign-cy</string>
 			<string>Ertick-cy</string>
 			<string>ertick-cy</string>
+			<string>Geupturn-cy</string>
+			<string>geupturn-cy</string>
+			<string>Gestroke-cy</string>
+			<string>gestroke-cy</string>
 			<string>Gemiddlehook-cy</string>
 			<string>gemiddlehook-cy</string>
+			<string>Zhedescender-cy</string>
+			<string>zhedescender-cy</string>
+			<string>Zedescender-cy</string>
+			<string>zedescender-cy</string>
+			<string>Kadescender-cy</string>
+			<string>kadescender-cy</string>
+			<string>Kaverticalstroke-cy</string>
+			<string>kaverticalstroke-cy</string>
 			<string>Kastroke-cy</string>
 			<string>kastroke-cy</string>
+			<string>Kabashkir-cy</string>
+			<string>kabashkir-cy</string>
+			<string>Endescender-cy</string>
+			<string>endescender-cy</string>
+			<string>EnGe-cy</string>
+			<string>enge-cy</string>
 			<string>Haabkhasian-cy</string>
 			<string>haabkhasian-cy</string>
+			<string>Esdescender-cy</string>
+			<string>esdescender-cy</string>
 			<string>Tedescender-cy</string>
 			<string>tedescender-cy</string>
+			<string>Ustraight-cy</string>
+			<string>ustraight-cy</string>
+			<string>Ustraightstroke-cy</string>
+			<string>ustraightstroke-cy</string>
+			<string>Hadescender-cy</string>
+			<string>hadescender-cy</string>
 			<string>Tetse-cy</string>
 			<string>tetse-cy</string>
+			<string>Chedescender-cy</string>
+			<string>chedescender-cy</string>
+			<string>Cheverticalstroke-cy</string>
+			<string>cheverticalstroke-cy</string>
+			<string>Shha-cy</string>
+			<string>shha-cy</string>
 			<string>Cheabkhasian-cy</string>
 			<string>cheabkhasian-cy</string>
 			<string>Chedescenderabkhasian-cy</string>
 			<string>chedescenderabkhasian-cy</string>
+			<string>Palochka-cy</string>
 			<string>Kahook-cy</string>
 			<string>kahook-cy</string>
 			<string>Eltail-cy</string>
@@ -445,14 +626,43 @@
 			<string>entail-cy</string>
 			<string>Emtail-cy</string>
 			<string>emtail-cy</string>
+			<string>palochka-cy</string>
+			<string>Abreve-cy</string>
+			<string>abreve-cy</string>
+			<string>Aie-cy</string>
+			<string>aie-cy</string>
+			<string>Iebreve-cy</string>
+			<string>iebreve-cy</string>
+			<string>Schwa-cy</string>
+			<string>schwa-cy</string>
 			<string>Schwadieresis-cy</string>
 			<string>schwadieresis-cy</string>
+			<string>Zhedieresis-cy</string>
+			<string>zhedieresis-cy</string>
+			<string>Zedieresis-cy</string>
+			<string>zedieresis-cy</string>
 			<string>Dzeabkhasian-cy</string>
 			<string>dzeabkhasian-cy</string>
+			<string>Imacron-cy</string>
+			<string>imacron-cy</string>
+			<string>Idieresis-cy</string>
+			<string>idieresis-cy</string>
+			<string>Odieresis-cy</string>
+			<string>odieresis-cy</string>
+			<string>Obarred-cy</string>
+			<string>obarred-cy</string>
 			<string>Obarreddieresis-cy</string>
 			<string>obarreddieresis-cy</string>
 			<string>Edieresis-cy</string>
 			<string>edieresis-cy</string>
+			<string>Umacron-cy</string>
+			<string>umacron-cy</string>
+			<string>Udieresis-cy</string>
+			<string>udieresis-cy</string>
+			<string>Uhungarumlaut-cy</string>
+			<string>uhungarumlaut-cy</string>
+			<string>Chedieresis-cy</string>
+			<string>chedieresis-cy</string>
 			<string>Gestrokehook-cy</string>
 			<string>gestrokehook-cy</string>
 			<string>Hahook-cy</string>
@@ -471,6 +681,16 @@
 			<string>enlefthook-cy</string>
 			<string>Eldescender-cy</string>
 			<string>eldescender-cy</string>
+			<string>endash</string>
+			<string>emdash</string>
+			<string>quoteleft</string>
+			<string>quoteright</string>
+			<string>quotesinglbase</string>
+			<string>quotedblleft</string>
+			<string>quotedblright</string>
+			<string>quotedblbase</string>
+			<string>ellipsis</string>
+			<string>numero</string>
 		</array>
 		<key>name</key>
 		<string>GF_Cyrillic_Pro</string>
